---
source: src/tql_validator.rs
expression: "(translate_result, split_by_line_and_trim_spaces(sql))"
---
- Err: "sql parser error: Unterminated string literal at Line: 3, Column 62"
- - "INSERT INTO \"~/books/matches\" (\"id\", \"loserId\", \"winnerId\", \"matchDate\")"
  - "VALUES (?, ?, DATETIME('now'), CURRENT_TIMESTAMP('derp))"
